--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.2.18",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-twitter-embed": "^4.0.4",
     "react-notion-x": "^6.16.0",
     "notion-client": "^6.16.0",
     "notion-utils": "^6.16.0",
